--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "tyoe": "module",
   "name": "telebirr-api",
-  "version": "1.0.5",
+  "version": "1.0.9",
   "description": "",
-  "exports": "./src/index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "engines": {
     "node": ">=18.18.0 <19.0.0"
   },
   "scripts": {
-    "build": "npm install && tsc",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
