--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "telebirr-api",
-  "version": "1.0.14",
+  "name": "telebirr-sdk",
+  "version": "1.0.15",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
